--- a/gradle.properties
+++ b/gradle.properties
@@ -23,13 +23,13 @@ org.gradle.daemon=true
 #Maven release values
 VERSION_NAME=1.0.3
 VERSION_CODE=3
-GROUP=com.github.techfreak
+GROUP=com.github.mohitmun
 
 POM_DESCRIPTION=Android Library that provides an example implementation of a Wizard UI on Android
-POM_URL=https://github.com/TechFreak/WizardPager
-POM_SCM_URL=https://github.com/TechFreak/WizardPager
-POM_SCM_CONNECTION=scm:https://github.com/TechFreak/WizardPager.git
-POM_SCM_DEV_CONNECTION=scm:https://github.com/TechFreak/WizardPager.git
+POM_URL=https://github.com/mohitmun/WizardPager
+POM_SCM_URL=https://github.com/mohitmun/WizardPager
+POM_SCM_CONNECTION=scm:https://github.com/mohitmun/WizardPager.git
+POM_SCM_DEV_CONNECTION=scm:https://github.com/mohitmun/WizardPager.git
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
 POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
